--- a/client/src/Component/Home/Home.css
+++ b/client/src/Component/Home/Home.css
@@ -8,11 +8,9 @@
     width: 85%;
     margin: auto;
 }
-.home h2{
+.home h2 , h4 , hr{
     color: #444;
-}
-.home h4{
-    margin: 0 0 10px 0;
+    margin: 0 0 5px 0;
 }
 .home .loading{
     animation: animate 3s infinite;
@@ -22,8 +20,18 @@
     right: 0;
     width: 100%;
     height: 100%;
+    z-index: 1;
     position: absolute;
-    background: rgba(0,0,0,0.3);
+    background: rgba(0,0,0,0.7);
+}
+.home .modal .close{
+    top : 10px;
+    right: 10px;
+    padding: 15px 20px;
+    color: #333;
+    border-radius: 55px;
+    background: #eee;
+    position: absolute;
 }
 @keyframes animate{
     from{
@@ -46,7 +54,6 @@
     height: 260px;
 }
 .products div:hover{
-    transform: scale(1.01);
     box-shadow: 0 0 5px rgba(0,0,0,0.3);
 }
 .products i{
