--- a/client/src/Component/Home/Home.css
+++ b/client/src/Component/Home/Home.css
@@ -3,10 +3,21 @@
     height: 100%;
     position: relative;
     text-align: center;
+    overflow-x: hidden;
 }
 .home .homeContainer{
     width: 85%;
     margin: auto;
+}
+.home .homeContainer .toggleCart{
+    width: 50px;
+    color: #eee;
+    padding: 15px 0;
+    position: absolute;
+    top: 0;
+    left: 0;
+    border-radius: 0 0 5px 0;
+    background: #29242f;
 }
 .home h2 , h4 , hr{
     color: #444;
@@ -20,7 +31,6 @@
     right: 0;
     width: 100%;
     height: 100%;
-    z-index: 1;
     position: absolute;
     background: rgba(0,0,0,0.7);
 }
@@ -32,6 +42,14 @@
     border-radius: 55px;
     background: #eee;
     position: absolute;
+}
+.home .cart{
+    width: 40%;
+    height: 100%;
+    position: absolute;
+    top: 0;
+    right: 0;
+    transition: .5s;
 }
 @keyframes animate{
     from{
@@ -54,7 +72,7 @@
     height: 260px;
 }
 .products div:hover{
-    box-shadow: 0 0 5px rgba(0,0,0,0.3);
+    box-shadow: 0 0 5px rgba(0,0,0,0.2);
 }
 .products i{
     padding: 2px 4px;
