--- a/client/src/Component/Login/Login.css
+++ b/client/src/Component/Login/Login.css
@@ -2,8 +2,8 @@
     font-size: 14px;
 }
 .login{
-    width: 25%;
-    margin: auto;
+    width: 50%;
+    margin: 5% auto;
     text-align: left;
 }
 .login h1{
@@ -42,6 +42,15 @@
 .login input{
     width: 100%;
     height: 25px;
+    border: none;
+    outline: none;
+    background: none;
+    margin-bottom: 10px;
+    padding: 5px 0 5px 5px;
+    border-bottom: 2px solid #29242f;
+}
+.login textarea{
+    width: 100%;
     border: none;
     outline: none;
     background: none;
